--- a/index.html
+++ b/index.html
@@ -121,14 +121,15 @@
               >
                 <div class="footer__content-copyright">
                   <p>
-                    Copyright © 2022 | Coded with
+                    Copyright © 2022 
+<!--                     | Coded with -->
                     <i class="fa fa-heart" aria-hidden="true"></i>
-                    by
+<!--                     by -->
                     <a
                       href="https://heric-olier-frontend-developer.netlify.app/"
                       target="_blank"
                     >
-                      Heric Olier
+<!--                       Heric Olier -->
                     </a>
                   </p>
                 </div>
